--- a/tasks/task 2/index.html
+++ b/tasks/task 2/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <div>
                     <lable>Ориентировочная дата прибытия к покукпателю</lable></br>
-                    <input class="field" id="arrivalDate" type="text" onfocus="(this.type = 'date')" required placeholder="Дата*">
+                    <input class="field" type="text" onfocus="(this.type = 'date')" required placeholder="Дата*">
                 </div>
                 <h3 class="title">Данные о водителе</h1>
                 <div>
@@ -42,7 +42,7 @@
                     <input class="field" id="whenIssued" type="text" required placeholder="Когда выдан">
                 </div>
                 <input class="send-button" type="submit" name="submit" value="Отправить">
-                <input class="cancel-button" type="submit" name="submit" value="Отменить">
+                <input class="cancel-button" type="reset" name="reset" value="Отменить">
             </form>
         </div>
 
